<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AyurSutra.Card.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSmartTokenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_token"
            android:textAppearance="@style/TextAppearance.AyurSutra.Headline6"
            android:textColor="@color/text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTokenNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AyurSutra.Headline3"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSmartTokenLabel"
            tools:text="12" />

        <TextView
            android:id="@+id/tvCurrentPositionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/current_position"
            android:textAppearance="@style/TextAppearance.AyurSutra.Body2"
            android:textColor="@color/text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTokenNumber" />

        <TextView
            android:id="@+id/tvEstimatedWaitTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/estimated_wait_time"
            android:textAppearance="@style/TextAppearance.AyurSutra.Body2"
            android:textColor="@color/text_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPositionLabel" />

        <TextView
            android:id="@+id/tvEstimatedWaitTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AyurSutra.Body1"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvEstimatedWaitTimeLabel"
            app:layout_constraintStart_toEndOf="@+id/tvEstimatedWaitTimeLabel"
            app:layout_constraintTop_toTopOf="@+id/tvEstimatedWaitTimeLabel"
            tools:text="15 minutes" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AyurSutra.ProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:progress="75"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEstimatedWaitTimeLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>